--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-deploy-site",
   "description": "Grunt plugin that leverages git to deploy a web site",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/lonnygomes/grunt-deploy-site",
   "author": {
     "name": "Lonny Gomes",
@@ -27,14 +27,14 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-bump": "^0.3.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3"
+    "grunt": "^1.0.0",
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "^1.0.0"
   },
   "keywords": [
     "gruntplugin"
