--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-contrib-nodeunit": "^1.0.0"
   },
   "peerDependencies": {
-    "grunt": "^1.0.0"
+    "grunt": ">=0.4.0"
   },
   "keywords": [
     "gruntplugin"
